Sat Apr 12 03:12:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_basename, rb_file_s_dirname, rb_file_s_extname):
	  copy encoding.

Fri Apr 11 17:35:06 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (count_i): modified to shut warning up.

Fri Apr 11 17:25:09 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (count_i, count_iter_i, enum_count, enum_find_index):
	  Reduce code.

Fri Apr 11 17:06:01 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (find_index_i): modified to shut warning up.

	* enum.c (find_index_iter_i): ditto.

Fri Apr 11 16:44:43 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_find_index): Add support for find_index(obj);
	  [ruby-dev:34313].

	* array.c (rb_ary_index): Define find_index as an alias to index.

Fri Apr 11 16:42:33 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/yaml/store.rb (YAML::load): modified to support empty
	  database.

Fri Apr 11 08:05:12 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_object): add volatile to avoid potential GC bug.  a
	  patch from Tomoyuki Chikanaga <chikanag at nippon-control-system.co.jp>
	  in [ruby-dev:34311].

Thu Apr 10 23:08:52 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/pstore.rb (PStore::dump, PStore::load): allow subclass
	  overriding.  [ruby-dev:34305]

	* lib/yaml/store.rb (YAML::Store::marshal_dump_supports_canonical_option?): 
	  add a method to support faster PStore.
	
Thu Apr 10 20:36:45 2008  Akinori MUSHA  <knu@iDaemons.org>

	* misc/rdebug.el, misc/README: Remove rdebug.el as per request
	  from the maintainer and mention the ruby-debug project at
	  RubyForge in README; bug#19043.

Thu Apr 10 19:41:00 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_f_loop): Mention StopIteration in the document.

Thu Apr 10 19:23:55 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_pop_m, rb_ary_shift_m): Update documents for
	  #pop() and #shift().
